# centralvet-api-rback

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/controllers/: cliente_controller.rs  clinica_controller.rs  historia_clinica_controller.rs  mascota_controller.rs  mod.rs
src/models/: cliente.rs  clinica.rs  entrada_historia_clinica.rs  historia_clinica.rs  mascota.rs  mod.rs
src/repositories/: cliente_repository.rs  clinica_repository.rs  file_repository.rs  historia_clinica_repository.rs  mascota_repository.rs  mod.rs
src/services/: cliente_service.rs  clinica_service.rs  historia_clinica_service.rs  mascota_service.rs  mod.rs
