[package]
name = "centralvet-api-rback"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rocket_cors = "0.6.0"
log = "0.4"
env_logger = "0.10"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[features]
default = ["storage-memory"]
storage-memory = []
storage-file = []

